# backcast

./: .gitignore  CLAUDE.md
.claude/: settings.json  settings.local.json
backcast_engine/: README.md  pyproject.toml
backcast_engine/config/: default_config.yaml
backcast_engine/notebooks/: 00_tutorial.ipynb  01_eda.ipynb  02_model_comparison.ipynb  03_validation.ipynb  04_downstream.ipynb  README.md
backcast_engine/scripts/: build_notebooks.py  run_backcast.py
backcast_engine/src/backcast/: __init__.py  exceptions.py  pipeline.py
backcast_engine/src/backcast/data/: __init__.py  loader.py  transforms.py
backcast_engine/src/backcast/downstream/: __init__.py  (+3 more)
backcast_engine/tests/: test_copula_sim.py  test_diagnostics.py  test_downstream.py  test_em.py  test_holdout.py  test_kalman_tvp.py  test_loader.py  test_metrics.py  test_model_selector.py  test_multiple_impute.py  test_pipeline.py  test_plots.py  test_regime_hmm.py  test_run_backcast_cli.py  test_single_impute.py  test_transforms.py
docs/: backcast_prompt.md  notebook_tutorial_prompt.md  synthetic_data_generator_prompt.md
synthetic_data_generator/: README.md  pyproject.toml  requirements.txt
synthetic_data_generator/examples/: generate_all_tiers.py
synthetic_data_generator/src/synthgen/: __init__.py  __main__.py  calendar.py  cli.py  config.py  correlation.py  io.py  masking.py  tier1_stationary.py  tier2_regime.py  tier3_realistic.py  tier4_stress.py
synthetic_data_generator/tests/: test_cli.py  test_correlation.py  test_masking.py  test_tier1.py  test_tier2.py  test_tier3.py  test_tier4.py
(+15 files in other folders)
